# SonnenBackup

./: .gitignore  CORE-requirements-dev.txt  README.md  __init__.py  config_flow.py  const.py  coordinator.py  hacs.json  manifest.json  pyproject.toml  pytest.ini  requirements-dev.txt  sensor.py  setup.py
custom_components/sonnenbackup/: PowerUnitEVO.py  __init__.py  batterie_sensors.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  quality_scale.yaml  sensor.py  strings.json  units.py  utils.py
custom_components/sonnenbackup/translations/: en.json
custom_components/sonnenbackup/translations-x/: en.json
sonnenbackup/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
sonnenbackup/translations/: en.json
tests/: __init__.py  battery_charging_asyncio.py  battery_discharging_asyncio.py  battery_discharging_offgrid_asyncio.py  battery_discharging_reserve_asyncio.py  conftest.py  mock_batterieresponse.py  mock_battery_configurations.py  mock_battery_responses.py  mock_sonnenbatterie_v2_charging.py  mock_sonnenbatterie_v2_discharging.py  mock_sonnenbatterie_v2_discharging_offgrid.py  test-x_config_flow.py  test-x_init.py  test-x_sensor.py  test_batterieresponse.py  test_config_flow.py  test_init.py  test_options_flow.py  test_sensor.py  test_sensors.py  test_utils.py
translations/: en.json
