[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
#build-backend = "setuptools.build_meta"

[project]
name = "sonnenbackup"
description = "sonnenBatterie backup reserve management"
authors = [
    {name = "MarkusBiggus", email = "6531552+MarkusBiggus@users.noreply.github.com"},
]
dependencies = [
    'sonnen_api_v2 @ "git+https://github.com/MarkusBiggus/sonnen_api_v2.git@0.5.15"',
]
requires-python = ">=3.12"
readme = {file="README.md", content-type = "text/markdown"}
license = {text = "MIT"}
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "sonnenbackup.__version__"}

[tool.setuptools.packages.find]
include = ["custom_components"]
